--- a/pom.xml
+++ b/pom.xml
@@ -71,8 +71,6 @@
         </dependency>
 
 
-
-
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
@@ -83,12 +81,14 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!--java-jwt依赖-->
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>4.4.0</version>
         </dependency>
 
+        <!--单元测试的坐标-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -100,9 +100,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.4.5</version>
             </plugin>
         </plugins>
+
     </build>
 
 </project>
