--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ jwt:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 直接输出到控制台
-
+  mapper-locations: classpath:/com/dc/ncsys_springboot/mapper/*/*.xml
 
 logging:
   level:
