--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,6 @@
         </dependency>
 
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.33</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>3.0.4</version>
@@ -55,14 +49,14 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.5.6</version> <!-- 使用最新版本 -->
+            <version>3.5.10</version> <!-- 使用最新版本 -->
         </dependency>
 
         <!--mybatis-plus代码生成器-->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
-            <version>3.5.6</version>
+            <version>3.5.10</version>
         </dependency>
 
         <!--velocity 模板引擎 mybatis-plus代码生成器用到-->
@@ -72,7 +66,7 @@
             <version>2.3</version>
         </dependency>
 
-
+        <!--mysql 依赖-->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
