--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
 #    为解决建表失败回滚而设计, 最后没有解决
 #    hikari:
 #      auto-commit: false
+#  profiles:
+#    active: dev
 
 server:
   port: 8090
@@ -16,6 +18,10 @@ server:
     context-path: /ncsys
     session:
       timeout: 3600 # Session超时时间（秒）
+#    encoding: 该配置未能解决windows环境中文乱码问题
+#      charset: UTF-8
+#      force: true
+#      enabled: true
 
 jwt:
   secret-key: your-strong-secret-key-here # 至少32位随机字符串
@@ -39,5 +45,8 @@ logging:
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %clr(%-5level) %clr(%logger{36}){cyan} - %line : %replace(%msg){'\"avatar\":\".*?\"', '\"avatar\":\"[FILTERED]\"'}\n"
     file: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %line : %replace(%msg){'\"avatar\":\".*?\"', '\"avatar\":\"[FILTERED]\"'}\n"
+#  charset: 该配置未能解决windows环境中文乱码问题
+#    console: UTF-8
+#    file: UTF-8
 
 
