--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,6 +3,6 @@ server:
   port: 8110
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/ncsys_dev
-    username: root
-    password: 123456
+    url: jdbc:mysql://192.168.31.36:3306/ncsys_dev
+    username: dev_user
+    password: dev_user@ncsys_dev@2025
