玉米粒收购: 修改字段注释名, 杂志->杂质; 全局->.gitignore: 忽略前端文件; 玉米粒出售: 创建实体类;

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ build/
 .vscode/
 
 /src/main/java/com/mybatis_plus_generator/**
+/src/main/resources/static/assets/**
+/src/main/resources/static/favicon.ico
+/src/main/resources/static/index.html
